[package]
name = "vulkust"
version = "0.1.0"
authors = ["Pierre Roudier <pierre@roudier.io>"]
edition = "2018"
repository = "https://github.com/proudier/vulkust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19" 
vulkano-win = "0.19"
winit = "0.22"
#winit = { version = "0.22", features = [ "serde" ] }